# mmdb

./: .gitignore  CLAUDE.md  COMPARISON.md  Cargo.toml  Makefile  README.md
.claude/: audit.md  settings.json
.claude/commands/: mm-debug.md  mm-review.md  verify.md  x-commit.md  x-fix.md  x-overhaul.md  x-review.md
.claude/docs/: audit-2026-04-12.md  audit-2026-04-14.md  commit-protocol.md  false-positive-guide.md  review-core.md  technical-patterns.md  workflow-policy.md
.claude/docs/patterns/: cache.md  compaction.md  concurrency.md  iterator.md  manifest.md  memtable.md  sst.md  unsafe-audit.md  wal.md
.claude/skills/x-commit/: SKILL.md
.claude/skills/x-fix/: SKILL.md
.claude/skills/x-overhaul/: SKILL.md
.claude/skills/x-review/: SKILL.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
core/: Cargo.toml  README.md
core/benches/units/: basic_mapx_raw.rs  versioned_mapx_raw.rs
core/src/: lib.rs
core/src/basic/mapx_raw/: mod.rs
core/src/common/: mod.rs
core/src/common/engines/: mod.rs  parity_backend.rs  rocks_backend.rs
core/tests/: basic_mapx_raw_test.rs
docs/: audit.md  issues.md
examples/: basic.rs  test_iter_perf.rs  test_rev.rs  test_rev2.rs
src/: db.rs  error.rs  lib.rs  options.rs  rate_limiter.rs  stats.rs  types.rs
src/cache/: block_cache.rs  mod.rs  table_cache.rs
src/compaction/: leveled.rs  mod.rs
src/iterator/: bidi_iter.rs  db_iter.rs  level_iter.rs  merge.rs  mod.rs  range_del.rs  source.rs
src/manifest/: mod.rs  version.rs  version_edit.rs  version_set.rs
src/memtable/: mod.rs  skiplist.rs  skiplist_impl.rs
src/sst/: block.rs  block_builder.rs  filter.rs  format.rs  mod.rs  table_builder.rs  table_reader.rs
src/sst/table_reader/: iterator.rs  mod.rs
src/wal/: mod.rs  reader.rs  record.rs  writer.rs
tests/: bidi_debug.rs  crash_recovery.rs  e2e_scenarios.rs  integration.rs  lazy_delete.rs  proptest_db.rs  scale_profile.rs  shared_cache.rs
utils/hash_db/: Cargo.toml  README.md
utils/hash_db/src/: lib.rs
utils/slot_db/: Cargo.toml  README.md
utils/slot_db/benches/: 0_slot_db_reverse_swap_order.rs  1_slot_db_positive.rs  2_slot_db_reverse.rs
utils/slot_db/src/: lib.rs
utils/trie_db/: Cargo.toml  Makefile  README.md
utils/trie_db/src/: lib.rs  test.rs
utils/trie_map/: Cargo.toml  README.md
utils/trie_map/src/: lib.rs
wrappers/: Cargo.toml  README.md
wrappers/benches/units/: basic_mapx.rs  basic_mapx_ord.rs  basic_mapx_ord_rawkey.rs  basic_mapx_ord_rawvalue.rs  basic_multi_key_mapx_double_key.rs  basic_multi_key_mapx_raw.rs  basic_multi_key_mapx_rawkey.rs  basic_multi_key_mapx_triple_key.rs  basic_vecx.rs  basic_vecx_raw.rs
wrappers/src/: lib.rs
wrappers/src/basic/mapx/: mod.rs
wrappers/src/basic/mapx_ord/: mod.rs
wrappers/src/basic/mapx_ord_rawkey/: mod.rs
wrappers/src/basic/mapx_ord_rawvalue/: mod.rs
wrappers/src/basic/orphan/: mod.rs
wrappers/src/basic/vecx/: mod.rs
wrappers/src/basic/vecx_raw/: mod.rs
wrappers/src/basic_multi_key/mapx_double_key/: mod.rs
wrappers/src/basic_multi_key/mapx_raw/: mod.rs
wrappers/src/basic_multi_key/mapx_rawkey/: mod.rs
wrappers/src/basic_multi_key/mapx_triple_key/: mod.rs
wrappers/src/common/: ende.rs  mod.rs
wrappers/src/dagmap/: mod.rs
wrappers/src/dagmap/raw/: mod.rs  test.rs
wrappers/src/dagmap/rawkey/: mod.rs  test.rs
wrappers/tests/: basic_mapx_ord_rawkey_test.rs  basic_mapx_ord_rawvalue_test.rs  basic_mapx_ord_test.rs  basic_mapx_test.rs  basic_multi_key_mapx_double_key_test.rs  basic_multi_key_mapx_raw_test.rs  basic_multi_key_mapx_rawkey_test.rs  basic_multi_key_mapx_triple_key_test.rs  basic_orphan_test.rs  basic_vecx_raw_test.rs  basic_vecx_test.rs
