[package]
name = "mmdb"
version = "2.0.0"
edition = "2024"
description = "A modern LSM-Tree storage engine in pure Rust"
license = "MIT OR Apache-2.0"

[dependencies]
crc32fast = "1"
lz4_flex = "0.11"
zstd = "0.13"
moka = { version = "0.12", features = ["sync"] }
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
proptest = "1"
rand = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[features]
default = []
