[package]
name = "mmdb"
version = "2.0.0"
edition = "2024"
description = "A modern LSM-Tree storage engine in pure Rust"
license = "MIT"
authors = ["hui.fan@mail.ru"]
repository = "https://github.com/rust-util-collections/mmdb"
homepage = "https://github.com/rust-util-collections/mmdb"
documentation = "https://docs.rs/mmdb"
keywords = ["rocksdb", "leveldb", "kv", "database", "db"]
categories = ["database-implementations"]
readme = "README.md"
rust-version = "1.89"
exclude = [".github/"]

[dependencies]
crc32fast = "1"
lz4_flex = "0.11"
zstd = "0.13"
moka = { version = "0.12", features = ["sync"] }
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
mmdb = { path = ".", features = ["test-utils"] }
tempfile = "3"
proptest = "1"
rand = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[features]
default = []
test-utils = []  # Exposes test helpers like DB::simulate_crash()
