[package]
name = "mmdb_core"
version = "0.62.2"
authors = ["hui.fan@mail.ru"]
edition = "2021"
description = ""
homepage = "https://github.com/rust-util-collections/mmdb"
repository = "https://github.com/rust-util-collections/mmdb/tree/master/core"
keywords = ["git", "leveldb", "rocksdb", "version", "vcs"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "GPL-3.0"

[dependencies]
ruc = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

threadpool = { workspace = true } # used in a background cleaner

primitive-types-0-12 = {  workspace = true, optional = true }
primitive-types-0-11 = { workspace = true, optional = true }
primitive-types-0-10 = { workspace = true, optional = true }

rocksdb = { workspace = true, optional = true }
parity-db = { workspace = true, optional = true }

[dev-dependencies]
bcs = "0.1.4"
hex = "0.4.3"
criterion = "0.4.0"

[features]
default = ["compress", "rocks_backend"]

rocks_backend = ["rocksdb"]
parity_backend = ["parity-db"]

compress = ["rocksdb?/zstd"]

extra_types = ["primitive-types-0-12", "primitive-types-0-11", "primitive-types-0-10"]

# [[bench]]
# name = "basic"
# harness = false

# [[bench]]
# name = "versioned"
# harness = false
