[package]
name = "mmdb_core"
version = "1.0.0"
authors = ["hui.fan@mail.ru"]
edition = "2021"
description = "A std-collection-like database"
homepage = "https://github.com/rust-util-collections/mmdb"
repository = "https://github.com/rust-util-collections/mmdb/tree/master/core"
keywords = ["kv", "leveldb", "rocksdb", "std"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "GPL-3.0"

[dependencies]
ruc = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

threadpool = { workspace = true } # used in a background cleaner

rocksdb = { workspace = true, optional = true }
parity-db = { workspace = true, optional = true }

[dev-dependencies]
bcs = "0.1.4"
hex = "0.4.3"
criterion = "0.4.0"

[features]
default = ["compress", "rocks_backend"]

rocks_backend = ["rocksdb"]
parity_backend = ["parity-db"]

compress = ["rocksdb?/zstd"]

# [[bench]]
# name = "basic"
# harness = false
