[package]
name = "mmdb"
version = "0.62.1"
authors = ["hui.fan@mail.ru"]
edition = "2021"
description = "A stuctured DB with some 'Git-like' features, mainly used in blockchain projects."
homepage = "https://github.com/rust-util-collections/mmdb"
repository = "https://github.com/rust-util-collections/mmdb/tree/master/wrappers"
keywords = ["git", "leveldb", "rocksdb", "version", "vcs"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "GPL-3.0"

[package.metadata.docs.rs]
features = ["extra_types"]

[dependencies]
serde = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

bcs = { workspace = true, optional = true }
rmp-serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

ruc = { workspace = true }
mmdb_core = { workspace = true }

[dev-dependencies]
hex = "0.4.3"
criterion = "0.4.0"
rand = "0.8.5"

[features]
default = ["rocks_backend", "compress", "msgpack_codec"]

rocks_backend = ["mmdb_core/rocks_backend"]
parity_backend = ["mmdb_core/parity_backend"]

compress = ["mmdb_core/compress"]

serde_ende = []
msgpack_codec = ["serde_ende", "rmp-serde"]
json_codec = ["serde_ende", "serde_json"]
bcs_codec = ["serde_ende", "bcs"]

extra_types = ["mmdb_core/extra_types"]

# [[bench]]
# name = "basic"
# harness = false

# [[bench]]
# name = "versioned"
# harness = false
