[package]
name = "mmdb"
version = "1.0.1"
authors = ["hui.fan@mail.ru"]
edition = "2021"
description = "A std-collection-like database"
homepage = "https://github.com/rust-util-collections/mmdb"
repository = "https://github.com/rust-util-collections/mmdb/tree/master/wrappers"
keywords = ["kv", "leveldb", "rocksdb", "std"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "GPL-3.0"

[package.metadata.docs.rs]
features = []

[dependencies]
serde = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

msgpack = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

ruc = { workspace = true }
mmdb_core = { workspace = true }

[dev-dependencies]
hex = "0.4.3"
criterion = "0.4.0"
rand = "0.8.5"

[features]
default = ["rocks_backend", "compress", "msgpack_codec"]

rocks_backend = ["mmdb_core/rocks_backend"]
parity_backend = ["mmdb_core/parity_backend"]

compress = ["mmdb_core/compress"]

serde_ende = []
msgpack_codec = ["serde_ende", "msgpack"]
json_codec = ["serde_ende", "serde_json"]

# [[bench]]
# name = "basic"
# harness = false

# [[bench]]
# name = "versioned"
# harness = false
