[package]
name = "mmdb_hash_db"
version = "0.1.0"
edition = "2021"
keywords = ["mpt", "trie", "database", "blockchain"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "An implementation of the `hash_db::HashDB` trait"
homepage = "https://github.com/rust-util-collections/mmdb"
repository = "https://github.com/rust-util-collections/mmdb"

[dependencies]
hash-db = { workspace = true }
keccak-hasher = { workspace = true }

bcs = { workspace = true }
serde = { workspace = true }

ruc = { workspace = true }
mmdb = { workspace = true }

[features]
default = ["rocks_backend"]

rocks_backend = ["mmdb/rocks_backend"]
parity_backend = ["mmdb/parity_backend"]

bcs_codec = ["mmdb/bcs_codec"]
json_codec = ["mmdb/json_codec"]
msgpack_codec = ["mmdb/msgpack_codec"]
