[package]
name = "mmdb_slot_db"
version = "0.1.1"
edition = "2021"
keywords = ["index", "cache", "timestamp", "slot", "database"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "A skip-list like index cache"
homepage = "https://github.com/rust-util-collections/mmdb"
repository = "https://github.com/rust-util-collections/mmdb"

[dependencies]
ruc = { workspace = true }
mmdb = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
rand = { workspace = true }

[features]
default = ["rocks_backend", "compress", "msgpack_codec"]

rocks_backend = ["mmdb/rocks_backend"]
parity_backend = ["mmdb/parity_backend"]

compress = ["mmdb/compress"]

json_codec = ["mmdb/json_codec"]
msgpack_codec = ["mmdb/msgpack_codec"]

[[bench]]
name = "0_slot_db_reverse_swap_order"
harness = false

[[bench]]
name = "1_slot_db_positive"
harness = false

[[bench]]
name = "2_slot_db_reverse"
harness = false
