[package]
name = "mmdb_trie_map"
version = "0.1.1"
edition = "2021"
keywords = ["mpt", "trie", "database", "blockchain"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "Various easy-to-use KV-map structures based of the `mmdb_trie_db` crate"
homepage = "https://github.com/rust-util-collections/mmdb"
repository = "https://github.com/rust-util-collections/mmdb"

[dependencies]
mmdb_trie_db = { workspace = true }

[features]
default = ["rocks_backend"]

rocks_backend = ["mmdb_trie_db/rocks_backend"]
parity_backend = ["mmdb_trie_db/parity_backend"]

json_codec = ["mmdb_trie_db/json_codec"]
msgpack_codec = ["mmdb_trie_db/msgpack_codec"]
